--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ReactJS Bootstrap Starter</title>
+    <title>MCGI</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="ReactJS Bootstrap Starter">
-		<meta name="author" content="Erwan DATIN (MacKentoch)">
+		<meta name="author" content="Jonathan Canaveral (JonJon)">
   </head>
   <body>
     <section id="root"></section>
