added component to cater userMedia and streams

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <section id="root"></section>
+    <script type="text/javascript" src="http://localhost:4000/cdn/erizo"></script>
     <script type="text/javascript" src="/public/assets/bundle.js"></script>
   </body>
 </html>
