--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <section id="root"></section>
-    <script type="text/javascript" src="https://localhost:4000/cdn/erizo"></script>
+    <script type="text/javascript" src="http://192.168.0.111:4000/cdn/erizo"></script>
     <script type="text/javascript" src="/public/assets/bundle.js"></script>
   </body>
 </html>
