--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="ReactJS Bootstrap Starter">
-		<meta name="author" content="Jonathan Canaveral (JonJon)">
+    <meta name="author" content="Jonathan Canaveral (JonJon)">
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   </head>
   <body>
     <section id="root"></section>
